<?xml version="1.0"?>
<package format="3">
  <name>boost_graph_issue</name>
  <version>0.1.0</version>
  <description>The package is to isolate an issue building the tesseract scene graph on windows</description>
  <maintainer email="levi.armstrong@swri.org">Levi Armstrong</maintainer>
  <license>Apache 2.0</license>
  <license>BSD</license>
  <author >Levi Armstrong</author>

  <build_depend>eigen</build_depend>
  <build_export_depend>eigen</build_export_depend>
  <build_depend>boost</build_depend>
  <build_export_depend>boost</build_export_depend>

  <export>
    <build_type>cmake</build_type>
  </export>

</package>
